--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemon": "^3.0.3",
     "stripe": "^14.13.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -24,7 +25,6 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
-    "concurrently": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
