--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --dest build",
     "lint": "vue-cli-service lint",
     "start": "concurrently \"npm run serve\" \"node index.js\""
   },
@@ -12,11 +12,11 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
+    "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "stripe": "^14.13.0",
-    "vue": "^3.2.13",
-    "vue-router": "^4.2.5",
-    "concurrently": "^8.2.2"
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
+    "concurrently": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
